Bug/ad 5592 discount level is not filtered correctly (#48)
* Working on querying discount with discount levels in zone.

* Fixed querying for discounts.

* Renamed bad JPQL method naming.

* Wrong values in discount.json removed.

* Disabled tests.

* Fixing tests.

* Started on isolating the scope for RestAPI web controllers.

* Optimizing unit and integration tests.

* Continuing isolating tests context

* Optimizing unit and integration tests.

* Optimizing unit and integration tests.